--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -17,14 +17,14 @@
         </div>
         <label>Bases</label>
         <div class="form-group">
-          <input class="form-control" type="number" name="startBase" style="width:8em;"
+          <input class="form-control" type="number" name="startBaseInp" style="width:8em;"
                  min="0" max="{{gc.length}}"
-                 ng-model="data.item.start"
+                 ng-model="startBaseInp"
                  ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
           <span class="small">to</span>
-          <input class="form-control" type="number" name="endBase" style="width:8em;"
+          <input class="form-control" type="number" name="endBaseInp" style="width:8em;"
                  min="0" max="{{gc.length}}"
-                 ng-model="data.item.end"
+                 ng-model="endBaseInp"
                  ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
         </div>
       </div>
