Make nBlast and pBlast work again
 * Delete extract.html

re Programming:#1008

--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -32,8 +32,9 @@
         <ul class="nav nav-stacked">
           <li><a href="#" lazy-href="zw.buildPermalink()">
               <span class="glyphicon glyphicon-link"></span>Share</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
+          <li><a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{data.item.ddna}}&JOB_TITLE={{data.item.name}}" target="_blank">
+            <span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
+          <li><a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{data.item.ddnaP}}&JOB_TITLE={{data.item.name}}" target="_blank"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
         </ul>
       </div>
       <div class="persist buttons">
