Change nblast and pblast to BLASTN and BLASTP
re Programming:#1008

--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -33,8 +33,8 @@
           <li><a href="#" lazy-href="zw.buildPermalink()">
               <span class="glyphicon glyphicon-link"></span>Share</a></li>
           <li><a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{data.item.ddna}}&JOB_TITLE={{data.item.name}}" target="_blank">
-            <span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
-          <li><a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{data.item.ddnaP}}&JOB_TITLE={{data.item.name}}" target="_blank"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
+            <span class="glyphicon glyphicon-new-window"></span>BLASTN</a></li>
+          <li><a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{data.item.ddnaP}}&JOB_TITLE={{data.item.name}}" target="_blank"><span class="glyphicon glyphicon-new-window"></span>BLASTP</a></li>
         </ul>
       </div>
       <div class="persist buttons">
