--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -72,7 +72,8 @@
       <div class="dna-text" style="color: #ccc; float:left; width:12%;">
         <npact-protein-translation
           item ="data.item"
-          start="startBase" end="data.item.start - 1"
+            start="data.item.complement ? data.item.end + 1 : startBase"
+            end="data.item.complement ? endBase : data.item.start - 1"
           extended-window="extendedWindow"
           complement="data.item.complement">
         </npact-protein-translation>
@@ -87,7 +88,8 @@
       <div class="dna-text" style="color: #ccc; float:left; width:12%">
         <npact-protein-translation
           item ="data.item"
-          start="data.item.end + 1" end="endBase" complement="data.item.complement"
+            start="data.item.complement ? startBase : data.item.end + 1 "
+            end="data.item.complement ? data.item.start - 1 : endBase "
           extended-window="extendedWindow">
         </npact-protein-translation>
       </div>
