Trying to get graph navigation working
 * clicking bases is doing what is expected for start and end points in
   standard mode in all three translation panes
 * clicking bases in complement mode works for the first two panes

re Programming:#1008 (4)

--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -73,8 +73,8 @@
       <div class="dna-text" style="color: #ccc; float:left; width:12%;">
         <npact-protein-translation
           item ="data.item"
-            start="data.item.complement ? data.item.end + 1 : startBase"
-            end="data.item.complement ? endBase : data.item.start - 1"
+            start="data.item.complement ? data.item.end  : startBase+1"
+            end="data.item.complement ? endBase-1 : data.item.start "
           extended-window="extendedWindow"
           complement="data.item.complement">
         </npact-protein-translation>
@@ -90,7 +90,7 @@
         <npact-protein-translation
           item ="data.item"
             start="data.item.complement ? startBase : data.item.end + 1 "
-            end="data.item.complement ? data.item.start - 1 : endBase "
+            end="data.item.complement ? data.item.start-1 : endBase "
           extended-window="extendedWindow">
         </npact-protein-translation>
       </div>
