--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -74,7 +74,7 @@
     <h3>Tracks <a class="small" href="#downloads-tracks" >Download tracks</a></h3>
     <div>
       <div ng-repeat="t in gc.tracks track by t.filename">
-        <label class="track-label" title="{{t.filename}}"><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>&nbsp;<small>{{t.id()}}</small>
+        <label class="track-label" title="{{t.filename}}"><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>
       </div>
       <div><button class="btn btn-default btn-xs" target="_self">Upload a track</button></div>
 
